--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Fake Twitter</title>
   </head>
   <body>
-    <div id="root">
+    <div id="root" />
     <script src="./bundle/index.js"></script>
   </body>
 </html>
